[package]
name = "comon"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
bzip2 = "0.4"
flate2 = "1.0"
tar = "0.4.38"
zip = "0.5.13"
walkdir = "2.3.2"
xz2 = "0.1.6"
zstd = "0.9.0"


[build-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.2"
