[package]
name = "comon"
version = "0.2.0"
repository = "https://github.com/imkeisuke/comon"
readme = "README.md"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bzip2 = "0.4.4"
clap = { version = "4.5.4", features = ["derive"] }
delharc = "0.6.1"
flate2 = "1.0.29"
sevenz-rust = "0.6.0"
tar = "0.4.40"
time = "0.3.36"
unrar = "0.5.3"
xz2 = "0.1.7"
zip = "2.1.0"
zstd = "0.13.1"

[build-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.2"
toml = "0.8.12"
